@@ -109,6 +109,7 @@ A <a href="http://developer.gnome.org/gtk/2.24/GtkTreeView.html">GtkTreeView</a>
 	&lt;item&gt;data&lt;/item&gt;...
 	&lt;item icon-name="image"&gt;data&lt;/item&gt;...
 	&lt;item stock-id="gtk-image"&gt;data&lt;/item&gt;...
+	&lt;output file&gt;filename&lt;/output&gt;
 &lt;/tree&gt;
 </pre>
 
@@ -156,6 +157,7 @@ A <a href="http://developer.gnome.org/gtk/2.24/GtkTreeView.html">GtkTreeView</a>
 <tr><td class="wiki"> item </td><td class="wiki"> Input data </td><td class="wiki"> <i>data0</i> <code>|</code> <i>data1</i> <code>|</code> ... </td><td class="wiki"> </td><td class="wiki"> </td></tr>
 <tr><td class="wiki"> item icon-name="<i>image</i>" </td><td class="wiki"> Input data </td><td class="wiki"> <i>data0</i> <code>|</code> <i>data1</i>  <code>|</code> ... </td><td class="wiki"> </td><td class="wiki"> </td></tr>
 <tr><td class="wiki"> item stock-id="<i>gtk-image</i>" </td><td class="wiki"> Input data </td><td class="wiki"> <i>data0</i> <code>|</code> <i>data1</i>  <code>|</code> ... </td><td class="wiki"> </td><td class="wiki"> </td></tr>
+<tr><td class="wiki"> output file </td><td class="wiki"> Data output target </td><td class="wiki"> Filename </td><td class="wiki"> </td><td class="wiki"> 0.8.1 </td></tr>
 </table>
 
 <h2> Signals </h2>
@@ -176,6 +178,7 @@ A <a href="http://developer.gnome.org/gtk/2.24/GtkTreeView.html">GtkTreeView</a>
 <tr><td class="wiki"> hide </td><td class="wiki"> Hide widget </td><td class="wiki"> Shell variable name </td><td class="wiki"> 0.8.1 </td></tr>
 <tr><td class="wiki"> grabfocus </td><td class="wiki"> Grab input focus </td><td class="wiki"> Shell variable name </td><td class="wiki"> 0.8.1 </td></tr>
 <tr><td class="wiki"> refresh </td><td class="wiki"> Reload input data </td><td class="wiki"> Shell variable name </td><td class="wiki"> </td></tr>
+<tr><td class="wiki"> save </td><td class="wiki"> Save widget data </td><td class="wiki"> Shell variable name </td><td class="wiki"> 0.8.1 </td></tr>
 <tr><td class="wiki"> clear </td><td class="wiki"> Remove all widget data </td><td class="wiki"> Shell variable name </td><td class="wiki"> 0.7.21 </td></tr>
 <tr><td class="wiki"> removeselected </td><td class="wiki"> Remove selected widget data </td><td class="wiki"> Shell variable name </td><td class="wiki"> </td></tr>
 </table>
@@ -241,7 +244,7 @@ A <a href="http://developer.gnome.org/gtk/2.24/GtkTreeView.html">GtkTreeView</a>
 						<td>
 							<table width="100%" cellpadding="0px" cellspacing="0px">
 								<tr>
-									<td class="footer" width="33%" align="center">2012-09-04 <a href="mailto:thunorsif@hotmail.com">Thunor</a></td>
+									<td class="footer" width="33%" align="center">2012-09-05 <a href="mailto:thunorsif@hotmail.com">Thunor</a></td>
 									<td class="footer" width="33%" align="center"><a href="http://code.google.com/p/gtkdialog/">Project Page</a></td>
 									<td class="footer" width="33%" align="center"><a href="http://www.murga-linux.com/puppy/viewtopic.php?t=69188">Development Thread</a></td>
 								</tr>
